<resources>
    <string name="app_name">New Trainig Project</string>
    <string name="login_page">Login Page</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_username">Forget Username </string>
    <string name="forget_password">Forget Password …?</string>
    <string name="submit">Submit</string>
    <string name="registration_form">Registration Form</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="hobbies">Hobbies</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="football">Football</string>
    <string name="reading">Reading</string>
    <string name="agree_terms_and_conditions">Agree Terms And Conditions</string>
    <string name="register">Register</string>
    <string name="new_registration">New Registration</string>
    <string name="reset">Reset</string>
    <string name="slno">SlNo</string>
    <string name="home_email">Home Email</string>
    <string name="home_user_name">Home User Name</string>
    <string name="home_name">Home Name</string>
    <string name="add_item">Add Item</string>
    <string name="view_item">View Item</string>
    <string name="add_content">Add Content</string>
    <string name="district">District</string>
    <string name="enter">Enter</string>
    <string name="pin_code">Pin Code</string>
    <string name="back">Back</string>
    <string name="slnoview">SlNoView</string>
    <string name="states_view">States View</string>
    <string name="district_view">District View</string>
    <string name="pin_code_view">Pin Code View</string>
    <string name="add_spinner">Add Spinner</string>
    <string name="spinner_values">Spinner Values</string>
    <string name="enter_the_state_name">Enter the State Name</string>
    <string name="enter_spinner_value">Enter Spinner Value</string>
    <string name="get_location">Get Location</string>
    <string name="click_here_for_location">Click Here For Location</string>
    <string name="txt_refresh_location">Refresh Location</string>
    <string name="txt_edit_address">Edit Address</string>
    <string name="txt_display_list">Display List</string>
    <string name="txt_character_name">Character Name</string>
    <string name="txt_real_name">Real Name</string>
    <string name="txt_team">Team</string>
    <string name="txt_first_appearance">First Appearance</string>
    <string name="txt_created_by">Created By</string>
    <string name="txt_publisher">Publisher</string>
    <string name="txt_bio">Bio</string>
</resources>