<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_character_name" />

        <TextView
            android:id="@+id/tvRealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_real_name" />

        <TextView
            android:id="@+id/tvTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_team" />

        <TextView
            android:id="@+id/tvFirstAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_first_appearance" />

        <TextView
            android:id="@+id/tvCreatedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_created_by" />

        <TextView
            android:id="@+id/tvPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_publisher" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_bio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imvCharacterImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>