<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvSlNoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/slnoview"
        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvStatesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/states_view"
        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvDistrictView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/district_view"
        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPinCodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pin_code_view"
        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"/>
</LinearLayout>