<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAddSpinner"
    android:orientation="vertical"
    android:background="@color/Light_yellow"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_values"
        android:layout_gravity="center"
        android:textSize="30sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_state_name"
        android:layout_gravity="center"
        android:id="@+id/etSpinnerValue"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btEnterSpinner"
        android:text="@string/enter_spinner_value"
        android:layout_gravity="center"/>
</LinearLayout>