<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationActivity"
    android:background="@color/locationBg">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btGetLocation"
        android:text="@string/click_here_for_location"
        style="@style/Button_Login"
        android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTime"
        style="@style/style_text_view_location"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLatitude"
        style="@style/style_text_view_location"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLongitude"
        style="@style/style_text_view_location"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddressLocation"
        style="@style/style_text_view_location"
        android:enabled="false"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_20dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btRefreshLocation"
        android:text="@string/txt_refresh_location"
        style="@style/Button_Login"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dime_20dp"
       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btEditLocation"
        android:text="@string/txt_edit_address"
        style="@style/Button_Login"
        android:layout_gravity="center"
        />
</LinearLayout>

</LinearLayout>